Fix style issue in main App component
Overflowing content was being rendered incorrectly; when content was too large in the central panel (posts list, chats list, etc.), only the bottom half of it could be scrolled. Adding 'display: flex' to the main App component fixes this.

--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -82,11 +82,6 @@ table {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
-
-    --page-max-width: 1440px;
-    --page-min-width: 0px;
-    --page-max-height: 100%;
-    --page-min-height: 480px;
 }
 
 body,
@@ -105,6 +100,10 @@ body > #root,
 
     /* Prevent element 'shifting' as scrollbar is calculated when rendering new content */
     overflow-y: scroll;
+    
+    display: flex;
+
+    height: 100%;
 }
 
 /* Custom Scrollbar */
